2001-04-08  Kevin Buettner  <kevinb@redhat.com>

	* printcmd.c (print_frame_args): Use a cleanup to invoke
	ui_out_list_end() so that the list count nesting flag will
	be decremented properly when an error occurs.
	* stack.c (print_frame): Likewise.

2001-04-06  J.T. Conklin  <jtc@redback.com>

	* dcache.c (dcache_write_line): Fixed bugs where cache line was
 	not written to target correctly.

	* gdbserver/low-hppabsd.c (read_inferior_memory): Add explicit 
	void return value;
	* gdbserver/low-nbsd.c: Likewise.
	* gdbserver/low-sparc.c: Likewise.
	* gdbserver/low-sun3.c: Likewise.

2001-04-06  Geoffrey Keating  <geoffk@redhat.com>

	* config/rs6000/nm-rs6000.h (PTRACE_ATTACH): Don't define.
	(PTRACE_DETACH): Don't define.

2001-04-06  David Smith  <dsmith@redhat.com>

	* arch-utils.c (default_prepare_to_proceed)
	(generic_prepare_to_proceed): Added new functions.
	* arch-utils.h: New function declarations for
	default_prepare_to_proceed() and generic_prepare_to_proceed().
	* gdbarch.sh: Added PREPARE_TO_PROCEED.
	* gdbarch.c: Regenerated.
	* gdbarch.h: Regenerated.
	* inferior.h: Added get_last_target_status() declaration.
	* infrun.c (get_last_target_status): Added new function.
	(handle_inferior_event): Saves last pid and waitstatus, which will
	get returned by get_last_target_status(). 

	* hppa-tdep.c (prepare_to_proceed):  Added comment stating that
	prepare_to_proceed() is potentially redundant since
	default_prepare_to_proceed() has been added.
	* linux-thread.c (prepare_to_proceed): Ditto.
	* lin-lwp.c (prepare_to_proceed): Ditto.
	* m3-nat.c (prepare_to_proceed): Ditto.
	
2001-04-05  Andrew Cagney  <ac131313@redhat.com>

	Obsolete powerpcle-*-cygwin* and powerpcle-*-solaris* platforms
	and powerpc-*-netware* target.
	* configure.host (powerpcle-*-cygwin*, powerpcle-*-solaris*):
	Obsolete.
	* configure.tgt (powerpc-*-netware*, powerpcle-*-cygwin*)
	(powerpcle-*-solaris*): Obsolete.
	* config/powerpc/tm-cygwin.h: Obsolete.