@@ -1,5 +1,12 @@
 2001-04-08  Kevin Buettner  <kevinb@redhat.com>
 
+	* fork-child.c (fork_inferior, clone_and_follow_inferior): 
+	Document fact that apparent call to vfork() might actually be
+	a call to fork() instead.
+	* ser-pipe.c (pipe_open): Likewise.
+
+2001-04-08  Kevin Buettner  <kevinb@redhat.com>
+
 	* printcmd.c (print_frame_args): Use a cleanup to invoke
 	ui_out_list_end() so that the list count nesting flag will
 	be decremented properly when an error occurs.
